# dataset_convertor

./: CMakeLists.txt  README.md  calib_vi.sh  package.xml
calib/: param.txt
launch/: read_kalibr.launch
python/: mcap_reader_ros2.py
src/: data_pub.cpp  read_FLIR_img_mocap.cpp  read_SPAD_img_mocap.cpp  read_img_mocap.cpp  read_imu_mocap.cpp  read_kalibr.cpp  read_kalibr.hpp  transform.cpp
