<?xml version="1.0"?>
<package format="2">
    <name>dataset_convertor</name>
    <version>0.0.1</version>
    <description>dataset_convertor for dataset collection</description>

    <maintainer email="junlin.song@uni.lu">junlin.song</maintainer>

    <license>GPL-3.0</license>

    <author>junlin.song</author>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>message_generation</build_depend>
    <exec_depend>message_runtime</exec_depend>

    <depend>geometry_msgs</depend>
    <depend>nav_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>roscpp</depend>
    <depend>rosbag</depend>
    <depend>cv_bridge</depend>
    <depend>image_transport</depend>

    <export>
    </export>
</package>
